2007-12-03  J. Tang  <jtang@tresys.com>

	* Apol permission map files are now part of libapol rather than
	apol; this way they can be used if the user installs just
	the setools-libs RPM package instead of setools-gui.

	* Fixed error in apol where searching for type rules ignored the
	'set source as any' option.

	* Added seaudit_filter_set_enabled(),
	seaudit_filter_get_enabled(), and seaudit_filter_clear() to
	libseaudit.

	* Added ability to enable/disable on a per-filter basis in
	seaudit.  Added ability to set strict matching behavior
	per-filter.  Modified clear button to operate on the entire
	filter, instead of per tab.

2007-11-30  J. Tang  <jtang@tresys.com>

	* Added seaudit_filter_set_avcname() and
	seaudit_filter_get_avcname(); updated unit tests.

2007-11-02  J. Tang  <jtang@tresys.com>

	* Ported bug fixes in branches/setools-devel to trunk.  This is
	the official release of SETools 3.3.2.

	* Fixed error in libsefs/Java where the library has not been built
	correctly since version 4 of libsefs.

2007-10-31  J. Mowery  <jmowery@tresys.com>

	* Fix to libqpol when querying policies with no genfscon statements.

	* Fix to SWIG wrappers to correctly report exceptions in multi-threaded
	  Java environments.

2007-10-31  J. Tang  <jtang@tresys.com>

	* Modifed libqpol to explicitly ignore disabled aliases.

	* Merged RedHat's spec file changes.

2007-10-08  J. Tang  <jtang@tresys.com>

	* Fix to libqpol when qpol_type_get_alias_iter() could erroneously
	be set to an initially wrong position for certain primary types.

2007-10-02  J. Tang  <jtang@tresys.com>

	* Fix to libqpol to synthesize object_r.  This was previously
	(erroneously) handled in libapol.

2007-10-01  J. Tang  <jtang@tresys.com>

	* Creation a new apol analysis module, 'Symbol Search', that
	utilizes libpolsearch.

2007-09-27  J. Mowery  <jmowery@tresys.com>

	* Creation of a new library, libpolsearch, to find policy
	components satisfying a list of criteria.  This library is wrapped