@@ -1,4 +1,8 @@
-hv3_DATA = hv3-wrapped.tcl
+if INSTALL_SNIT
+  SNIT_FILES = snit.tcl
+endif
+
+hv3_DATA = hv3-wrapped.tcl $(SNIT_FILES)
 hv3dir = $(setoolsdir)
 
 EXTRA_DIST = \
@@ -7,21 +11,20 @@ EXTRA_DIST = \
 	hv3_browser.tcl \
 	hv3_doctype.tcl \
 	hv3_dom.tcl \
+	hv3_encodings.tcl \
 	hv3_file.tcl \
 	hv3_form.tcl \
 	hv3_frameset.tcl \
+	hv3_home.tcl \
+	hv3_http.tcl \
 	hv3_object.tcl \
-	hv3_profile.tcl \
 	hv3_request.tcl \
+	hv3_string.tcl \
 	hv3_widgets.tcl
 
 dist_noinst_DATA = license.txt snit.tcl
 
-if INSTALL_SNIT
-  SNIT_FILES = snit.tcl
-endif
-
-hv3-wrapped.tcl: $(SNIT_FILES) $(EXTRA_DIST)
+hv3-wrapped.tcl: $(EXTRA_DIST)
 	cat $^ > $@
 
 CLEANFILES = hv3-wrapped.tcl
